; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/ramips/files-4.14/drivers/net/ethernet/mediatek/extr_mt7530.c_mt7530_find_mapping.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/ramips/files-4.14/drivers/net/ethernet/mediatek/extr_mt7530.c_mt7530_find_mapping.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mt7530_mapping = type { i32 }
%struct.device_node = type { i32 }

@.str = private unnamed_addr constant [17 x i8] c"mediatek,portmap\00", align 1
@mt7530_defaults = common dso_local global %struct.mt7530_mapping* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.mt7530_mapping* @mt7530_find_mapping(%struct.device_node* %0) #0 {
  %2 = alloca %struct.mt7530_mapping*, align 8
  %3 = alloca %struct.device_node*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store %struct.device_node* %0, %struct.device_node** %3, align 8
  %6 = load %struct.device_node*, %struct.device_node** %3, align 8
  %7 = call i64 @of_property_read_string(%struct.device_node* %6, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8** %4)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store %struct.mt7530_mapping* null, %struct.mt7530_mapping** %2, align 8
  br label %36

10:                                               ; preds = %1
  store i32 0, i32* %5, align 4
  br label %11

11:                                               ; preds = %32, %10
  %12 = load i32, i32* %5, align 4
  %13 = load %struct.mt7530_mapping*, %struct.mt7530_mapping** @mt7530_defaults, align 8
  %14 = call i32 @ARRAY_SIZE(%struct.mt7530_mapping* %13)
  %15 = icmp slt i32 %12, %14
  br i1 %15, label %16, label %35

16:                                               ; preds = %11
  %17 = load i8*, i8** %4, align 8
  %18 = load %struct.mt7530_mapping*, %struct.mt7530_mapping** @mt7530_defaults, align 8
  %19 = load i32, i32* %5, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds %struct.mt7530_mapping, %struct.mt7530_mapping* %18, i64 %20
  %22 = getelementptr inbounds %struct.mt7530_mapping, %struct.mt7530_mapping* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @strcmp(i8* %17, i32 %23)
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %31, label %26

26:                                               ; preds = %16
  %27 = load %struct.mt7530_mapping*, %struct.mt7530_mapping** @mt7530_defaults, align 8
  %28 = load i32, i32* %5, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds %struct.mt7530_mapping, %struct.mt7530_mapping* %27, i64 %29
  store %struct.mt7530_mapping* %30, %struct.mt7530_mapping** %2, align 8
  br label %36

31:                                               ; preds = %16
  br label %32

32:                                               ; preds = %31
  %33 = load i32, i32* %5, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %5, align 4
  br label %11

35:                                               ; preds = %11
  store %struct.mt7530_mapping* null, %struct.mt7530_mapping** %2, align 8
  br label %36

36:                                               ; preds = %35, %26, %9
  %37 = load %struct.mt7530_mapping*, %struct.mt7530_mapping** %2, align 8
  ret %struct.mt7530_mapping* %37
}

declare dso_local i64 @of_property_read_string(%struct.device_node*, i8*, i8**) #1

declare dso_local i32 @ARRAY_SIZE(%struct.mt7530_mapping*) #1

declare dso_local i32 @strcmp(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
